2025-12-10T01:01:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20083663804 # 834
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-10
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 414 588 / 415 589
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 418 592
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2025-11-18] / [2025-12-09]

2025-12-02T00:59:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19842925973 # 826
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 413 587 / 415 589
* notice: next accum: outdated-unq outdated-all / unq all: 414 588 / 415 589
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-17] / []

2025-11-23T01:06:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19603745185 # 817
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 412 586 / 415 589
* notice: next accum: outdated-unq outdated-all / unq all: 413 587 / 415 589
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-09] / []

2025-11-19T00:58:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19485885173 # 813