@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-10T01:01:20Z",
+  "timestamp" : "2025-12-11T01:01:58Z",
   "count_outdated" : 589,
   "uniques_outdated" : 415,
-  "count" : 592,
-  "uniques" : 418,
+  "count" : 593,
+  "uniques" : 419,
   "clones" : [
     {
       "timestamp": "2025-12-09T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
