@@ -1,11 +1,16 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2025-12-09T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-12-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
